# diffchunk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  maintenance.md
docs/designs/: maintaining.md  publishing.md
src/: __init__.py  chunker.py  main.py  models.py  parser.py  server.py  tools.py
src/diffchunk/: __init__.py  chunker.py  cli.py  filters.py  parser.py
tests/: test_integration.py  test_mcp_components.py  test_parser.py
tests/test_data/: README.md  react_18.0_to_18.3.diff
