[project]
name = "diffchunk"
version = "0.1.0"
description = "MCP server for navigating large diff files"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Peter Etelej", email = "peter@etelej.com"}
]
license = {text = "MIT"}
dependencies = [
    "click>=8.2.1",
    "mcp>=1.10.0",
]

[project.scripts]
diffchunk-mcp = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.0",
]
